deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: payment
  labels:
    app: payment
spec:
  selector:
    app: payment
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: payment
        version: v2
    spec:
      containers:
      - name: payment
        image: samuelpereiradesouza/payment:4
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
